# registry

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
docs/: AGENT.md  DEMODAPP.md
src/demo_backend/: Cargo.toml  demo_backend.did
src/demo_backend/src/: agent.rs  lib.rs  types.rs  utils.rs
src/registry_backend/: Cargo.toml  registry_backend.did
src/registry_backend/src/: lib.rs  types.rs  utils.rs
src/registry_frontend/src/: index.html  index.js
